Add leet code smaples

--- a/CppPractice.cbp
+++ b/CppPractice.cbp
@@ -37,9 +37,11 @@
 		<Unit filename="AlgorithmLinkedList.h" />
 		<Unit filename="AlgorithmSorting.cpp" />
 		<Unit filename="AlgorithmSorting.h" />
+		<Unit filename="Common.h" />
 		<Unit filename="CppExamples.cpp" />
 		<Unit filename="CppExamples.h" />
-		<Unit filename="LeetCode_211RemoveDuplicatesFromSortedArray.h" />
+		<Unit filename="LC026_211RemoveDuplicatesFromSortedArray.h" />
+		<Unit filename="LC080_212RemoveDuplicatesFromSortedArrayII.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
