--- a/CppPractice.cbp
+++ b/CppPractice.cbp
@@ -40,24 +40,30 @@
 		<Unit filename="Common.h" />
 		<Unit filename="CppExamples.cpp" />
 		<Unit filename="CppExamples.h" />
+		<Unit filename="LC020101RemoveDuplicatesFromSortedArray026.h" />
+		<Unit filename="LC020102RemoveDuplicatesFromSortedArrayII080.h" />
+		<Unit filename="LC020103SearchInRotatedSortedArray033.h" />
+		<Unit filename="LC020104SearchInRotatedSortedArrayII081.h" />
+		<Unit filename="LC020105MedianOfTwoSortedArrays_004.h" />
+		<Unit filename="LC020106LongestConsecutiveSequence.h" />
+		<Unit filename="LC020107TwoSum.h" />
+		<Unit filename="LC020108ThreeSum.h" />
 		<Unit filename="LC020109ThreeSumClosest.h" />
 		<Unit filename="LC020110FourSum.h" />
+		<Unit filename="LC020111RemoveElement.h" />
+		<Unit filename="LC020112NextPermutation.h" />
+		<Unit filename="LC020113PermutationSequence.h" />
+		<Unit filename="LC020114ValidSudoku.h" />
+		<Unit filename="LC020115TrappingRainWater.h" />
+		<Unit filename="LC020116RotatImage.h" />
 		<Unit filename="LC020201AddTwoNumbers.h" />
 		<Unit filename="LC020207RemoveNthNodeFromEndOfList.h" />
 		<Unit filename="LC020211LinkedListCycle.h" />
+		<Unit filename="LC0303StringToIntegeratoi008.h" />
+		<Unit filename="LC050101BinaryTreePreorderTraversal.h" />
 		<Unit filename="LC0602MergeTwoSortedList.h" />
 		<Unit filename="LC1102Sqrt.h" />
 		<Unit filename="LC1501ReverseInteger.h" />
-		<Unit filename="LC211RemoveDuplicatesFromSortedArray026.h" />
-		<Unit filename="LC212RemoveDuplicatesFromSortedArrayII080.h" />
-		<Unit filename="LC213SearchInRotatedSortedArray033.h" />
-		<Unit filename="LC214SearchInRotatedSortedArrayII081.h" />
-		<Unit filename="LC215MedianOfTwoSortedArrays_004.h" />
-		<Unit filename="LC216LongestConsecutiveSequence.h" />
-		<Unit filename="LC217TwoSum.h" />
-		<Unit filename="LC218ThreeSum.h" />
-		<Unit filename="LC33StringToIntegeratoi008.h" />
-		<Unit filename="LC511BinaryTreePreorderTraversal.h" />
 		<Unit filename="LCChapter10.h" />
 		<Unit filename="LCChapter11.h" />
 		<Unit filename="LCChapter12.h" />
