Add: more leet code, finish Easy ones

--- a/CppPractice.cbp
+++ b/CppPractice.cbp
@@ -64,18 +64,38 @@
 		<Unit filename="LC020114ValidSudoku.h" />
 		<Unit filename="LC020115TrappingRainWater.h" />
 		<Unit filename="LC020116RotatImage.h" />
+		<Unit filename="LC020117PlusOne.h" />
+		<Unit filename="LC020118ClimbingStairs.h" />
 		<Unit filename="LC020201AddTwoNumbers.h" />
+		<Unit filename="LC020204RemoveDuplicatesFromSortedList.h" />
 		<Unit filename="LC020207RemoveNthNodeFromEndOfList.h" />
 		<Unit filename="LC020211LinkedListCycle.h" />
 		<Unit filename="LC0301ValidPalindrome.h" />
+		<Unit filename="LC0302strStr.h" />
 		<Unit filename="LC0303StringToIntegeratoi008.h" />
+		<Unit filename="LC0304AddBinary.h" />
+		<Unit filename="LC0308LongestCommonPrefix.h" />
 		<Unit filename="LC0310IntegerToRoman.h" />
 		<Unit filename="LC0311RomanToInteger.h" />
+		<Unit filename="LC0312CountAndSay.h" />
+		<Unit filename="LC0315LengthOfLastWord.h" />
+		<Unit filename="LC040101ValidParentheses.h" />
 		<Unit filename="LC050101BinaryTreePreorderTraversal.h" />
+		<Unit filename="LC050104BinaryTreeLevelOrderTraversal.h" />
+		<Unit filename="LC050105BinaryTreeLevelOrderTraversalII.h" />
+		<Unit filename="LC050108SameTree.h" />
+		<Unit filename="LC050109SymmetricTree.h" />
+		<Unit filename="LC050110BalancedBinaryTree.h" />
+		<Unit filename="LC050401MinimumDepthOfBinaryTree.h" />
+		<Unit filename="LC050402MaximumDepthOfBinaryTree.h" />
+		<Unit filename="LC050403PathSum.h" />
+		<Unit filename="LC0601MergeSortedArray.h" />
 		<Unit filename="LC0602MergeTwoSortedList.h" />
 		<Unit filename="LC1102Sqrt.h" />
 		<Unit filename="LC1501ReverseInteger.h" />
 		<Unit filename="LC1502PalindromeNumber.h" />
+		<Unit filename="LC1508PascalTriangle.h" />
+		<Unit filename="LC1509PascalTriangleII.h" />
 		<Unit filename="LC1512ZigZagConversion.h" />
 		<Unit filename="LCChapter10.h" />
 		<Unit filename="LCChapter11.h" />
@@ -91,6 +111,10 @@
 		<Unit filename="LCChapter7.h" />
 		<Unit filename="LCChapter8.h" />
 		<Unit filename="LCChapter9.h" />
+		<Unit filename="LCChapterOthers.h" />
+		<Unit filename="LCCompareVersionNumbers.h" />
+		<Unit filename="LCIntersectionOfTwoLinkedList.h" />
+		<Unit filename="LCMinStack.h" />
 		<Unit filename="LCReverseLinkedList.h" />
 		<Unit filename="LCReverseWordsInAString.h" />
 		<Unit filename="main.cpp" />
